# backtesting.rs

./: CLAUDE.md  Cargo.toml  README.md  backtesting-review-analysis.md
.claude/: settings.local.json
benches/: backtest_benchmark.rs
examples/: buy_and_hold.rs  csv_data_loading.rs  load_aapl.rs  order_position_trade_flow.rs  simple_trading.rs  sma_crossover.rs  test_refactored_structs.rs
src/: lib.rs
src/backtest/: calculations.rs  mod.rs
src/data/: mod.rs
src/indicators/: bollinger_bands.rs  ema.rs  mod.rs  obv.rs  rsi.rs  sma.rs
src/optimization/: mod.rs
src/order/: mod.rs
src/plotting/: mod.rs
src/position/: mod.rs
src/strategy/: mod.rs
src/trade/: mod.rs
src/types/: mod.rs
